# AirQualityPrediction

./: README.md  app.py  data_fetcher.py  data_processor.py  deployment_requirements.txt  model.py  pyproject.toml  render_deployment_guide.md  requirements.txt  streamlit_requirements.txt  utils.py  visualization.py
.streamlit/: config.toml
attached_assets/: Pasted-Overview-This-project-aims-to-predict-the-Air-Quality-Index-AQI-for-the-next-24-hours-using-histor-1748177016305.txt
